# Gielda

./: CMakeLists.txt  fastbuild
include/: app.h
include/grafika/: animacja_koloru.h
include/templates/: przycisk.tpp
include/ui/: czcionka.h  grupa.h  klawisze_przyciski.h  kontener.h  obiekt.h  przycisk.h  suwak.h  ui.h  uklad.h
src/: app.cpp  gra.cpp  main.cpp  zapis_wczyt.cpp
src/grafika/: animacja_koloru.cpp
src/ui/: czcionka.cpp  grupa.cpp  kontener.cpp  obiekt.cpp  suwak.cpp  ui.cpp  uklad.cpp
